chore(fix):style 공백제거

--- a/jinwoo/category/templates/categorySearch.html
+++ b/jinwoo/category/templates/categorySearch.html
@@ -112,7 +112,7 @@
             </section>
 
             <!-- 2열 3행 - dataset-list -->
-            <div class="dataset-list-container grid-item grid-item-2-3" id="dataset-list-container" style=""></div>
+            <div class="dataset-list-container grid-item grid-item-2-3" id="dataset-list-container"></div>
 
             <!-- pagination -->
             <div class="pagination">
