feat(detailed):add detailed category ui

--- a/donguk/datainsert/static/css/datainsert.css
+++ b/donguk/datainsert/static/css/datainsert.css
@@ -81,7 +81,6 @@ textarea {
 }
 
 #file-list li .remove-file {
-    background-color: red;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -100,14 +99,14 @@ button {
     font-size: 14px;
     font-weight: bold;
     color: #fff;
-    background-color: #e5672d;
+    background-color: #555;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #d25520;
+    background-color: #777;
 }
 
 .submit-button {
