--- a/jinwoo/category/templates/categorySearch.html
+++ b/jinwoo/category/templates/categorySearch.html
@@ -95,8 +95,11 @@
                 </div>
             </section>
 
-            <!-- 2열 3행 - dataset-list -->
-            <div class="dataset-list-container grid-item grid-item-2-3" id="dataset-list-container"></div>
+            <!-- 2열 3행 - category-section -->
+            <div id="subCategoryList">
+            </div>
+            <!-- 2열 4행 - dataset-list -->
+            <div class="dataset-list-container grid-item grid-item-2-4" id="dataset-list-container"></div>
 
             <!-- pagination -->
             <div class="pagination">
