--- a/hojun/chatbot/templates/chatbot.html
+++ b/hojun/chatbot/templates/chatbot.html
@@ -53,7 +53,7 @@
             </div>
         </section>
     </div>
-    <script type="module" src="{{ url_for('chatbot.static', filename='js/main.js') }}"></script>
+    <script type="module" src="{{ url_for('chatbot.static', filename='js/chatbot.js') }}"></script>
     {% endblock %}
 </body>
 </html>
