feat(buy):add buy

--- a/donguk/datainsert/templates/datainsert.html
+++ b/donguk/datainsert/templates/datainsert.html
@@ -35,6 +35,7 @@
                         <option value="방송통신대">방송통신대</option>
                         <option value="서식">서식</option>
                         <option value="노하우">노하우</option>
+                        <option value="기업">기업</option>
                     </select>
                 </div>
                 <div class="form-group">
