--- a/jinwoo/category/static/css/categorySearch.css
+++ b/jinwoo/category/static/css/categorySearch.css
@@ -222,6 +222,10 @@
 /* dataset-card 내의 dataset-info 설정 */
 .dataset-card .dataset-info {
     flex: 1;
+    width: 200px; /* 원하는 너비 설정 */
+    white-space: nowrap; /* 텍스트가 한 줄로만 표시되도록 설정 */
+    overflow: hidden; /* 넘친 텍스트는 숨김 */
+    text-overflow: ellipsis; /* 넘친 텍스트는 ...으로 표시 */
 }
 /* 썸네일 */
 .dataset-thumbnail {
